syntax = "proto3";

option go_package = "github.com/Sona-28/goapplication/demo3/customer";

package customer;

service  CustomerService{
    rpc AddCustomer(CustomerRequest) returns (CustomerResponse);
    rpc GetCustomer(Empty) returns (CustList);
}

message CustomerRequest {
    int32 customer_id = 1;
    string customer_name = 2;
    int32 account_id = 3;
    string account_type = 4;
}

message CustomerResponse {
    string result = 1;
}

message CustList {
    repeated CustomerRequest cust = 1;
}

message Empty {}